--- a/339-A3-update/website/css/main.css
+++ b/339-A3-update/website/css/main.css
@@ -290,7 +290,7 @@ form.margin-bottom{
   /*border: 1px solid rgb(230, 230, 230);*/
   /*border-collapse: collapse;*/
   background-color: white;
-  border-bottom: 1px solid rgb(230, 230, 230);
+  /*border-bottom: 1px solid rgb(230, 230, 230);*/
 }
 
 .cart-product td {
